@@ -5172,8 +5172,8 @@ canvas/philip/tests/2d.shadow.enable.y.html
 canvas/philip/tests/2d.shadow.gradient.alpha.html
 canvas/philip/tests/2d.shadow.gradient.transparent.1.html
 canvas/philip/tests/2d.shadow.image.alpha.html
-canvas/philip/tests/2d.shadow.image.basic.html
 canvas/philip/tests/2d.shadow.image.scale.html
+canvas/philip/tests/2d.shadow.image.transparent.1.html
 canvas/philip/tests/2d.shadow.image.transparent.2.html
 canvas/philip/tests/2d.shadow.pattern.alpha.html
 canvas/philip/tests/2d.shadow.pattern.transparent.1.html
