@@ -1,3 +1,15 @@
+2010-06-02  Qi Zhang  <qi.2.zhang@nokia.com>
+
+        Reviewed by Dirk Schulze.
+
+        [Qt] Image shadow doesn't work
+        https://bugs.webkit.org/show_bug.cgi?id=37804
+
+        Enable image shadow basic test and disable image shadow transparent test case, that failed 
+        because of the Qt known issue on transparent image. 
+
+        * platform/qt/Skipped:
+
 2010-06-02  Dirk Schulze  <krit@webkit.org>
 
         Uneviewed.
